tests/neg/call.stk
fun foo(x: Int): Void = x p

fun bar(x: Int): Void =
  foo  // error
  x p

fun main =
  bar    // error
  10 p
